# model-scanner

./: .gitignore  CMakeLists.txt
examples/: README.md  camera_info.yml
include/model_scanner/: AprilTagDetector.h  Camera.h  Octree.h  Window.h
shaders/: common.glsl  mask.glsl  shader.glsl
src/: AprilTagDetector.cpp  Camera.cpp  Octree.cpp  Window.cpp  main.cpp
